--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,10 @@
     />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
-    <script src="https://apis.google.com/js/api.js" type="text/javascript"></script>
+    <script src="https://apis.google.com/js/api.js" async defer></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+
+
     <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
     <!-- add to homescreen for ios -->
