--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
 
-    <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+    <link rel="icon" type="image/png" href="assets/icon/aaditlife5.png" />
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
