--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script>
+    (function(w){var i=w.SENTRY_RELEASE=w.SENTRY_RELEASE||{};i.id='4182b247838858d242d0';})(this);
+    </script>
+    <!-- sentry-cordova -->
     <meta charset="utf-8" />
     <title>Ionic App</title>
 
