--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <script>
-    (function(w){var i=w.SENTRY_RELEASE=w.SENTRY_RELEASE||{};i.id='11bb646dbbd23bd84a14';})(this);
+    (function(w){var i=w.SENTRY_RELEASE=w.SENTRY_RELEASE||{};i.id='6e05f196e6da2d7cdb99';})(this);
     </script>
     <!-- sentry-cordova -->
     <meta charset="utf-8" />
@@ -20,7 +20,7 @@
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
 
-    <link rel="icon" type="image/png" href="assets/icon/aaditlife5.png" />
+    <link rel="icon" type="image/png" href="assets/icon/400dpiLogo.png" />
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
