page redirect if no data

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <script>
-    (function(w){var i=w.SENTRY_RELEASE=w.SENTRY_RELEASE||{};i.id='e604b0b5923a218313ce';})(this);
+    (function(w){var i=w.SENTRY_RELEASE=w.SENTRY_RELEASE||{};i.id='4bf7de34563f52007d53';})(this);
     </script>
     <!-- sentry-cordova -->
     <meta charset="utf-8" />
-    <title>Ionic App</title>
+    <title>Aadit Life</title>
 
     <base href="/" />
 
