--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <script>
-    (function(w){var i=w.SENTRY_RELEASE=w.SENTRY_RELEASE||{};i.id='6a45d406dacb2d742a0d';})(this);
+    (function(w){var i=w.SENTRY_RELEASE=w.SENTRY_RELEASE||{}; i.id='6a45d406dacb2d742a0d';})(this);
     </script>
     <!-- sentry-cordova -->
     <meta charset="utf-8" />
@@ -10,10 +10,7 @@
 
     <base href="/" />
 
-    <meta
-      name="viewport"
-      content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
+    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
     <script src="https://apis.google.com/js/api.js" async defer></script>
